# 20240815
- Implemented message migrate
- Implemented thread migrate
- Implemented GuildForum migrate (DRAFT)

# 20240817
- Added error handling in `ChannelHistory` iteration
- Split send long message
  - Can't reply to a webhook message (Limitation of Discord API)
- Added "replied" section to messages
- GuildText migrate (DRAFT)

# 20240821
- Fixed webhook fetch creation behaviour
- Webhook send wait to return message object
- Copy message object instead of deepcopy
- Precisely test the channel type